# Cookbook

./: .cursorrules  .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  dev.db  pyproject.toml
apps/api/app/: auth_guard.py  db.py  main.py  models.py  pdf.py  schemas.py
apps/api/app/routes/: misc.py  recipes.py
apps/api/tests/: test_health_db_auth.py  test_recipes_pdf.py
apps/web/: next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/__tests__/: home.test.tsx
apps/web/lib/: api.ts
apps/web/pages/: _app.tsx  index.tsx  library.tsx
apps/web/pages/api/: upload-photo.ts
apps/web/pages/api/auth/: [...auth0].ts
apps/web/pages/api/recipes/: [id].ts  index.ts
apps/web/pages/api/recipes/[id]/: export-pdf.ts
apps/web/pages/recipe/: [id].tsx
