[project]
name = "cookbook-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "reportlab>=4.1",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.28",
  "requests>=2.31",
  "authlib>=1.3"
]
[tool.pytest.ini_options]
addopts = "-q"


